--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "my-next-app",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +6,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "@contentstack/live-preview-utils": "1.3.2",
+    "contentstack": "^3.19.1",
+    "next": "^14.1.0",
+    "next-pwa": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@types/node": "20.11.19",
+    "@types/react": "18.2.56",
+    "eslint": "^8.56.0",
+    "typescript": "5.3.3"
   }
 }
