--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-next-app",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "yarn@4.1.0"
   "scripts": {
     "dev": "next dev",
     "build": "next build",
