--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "yarn@1.22.22",
   "dependencies": {
     "@contentstack/live-preview-utils": "1.3.2",
     "contentstack": "^3.19.1",
